# mini-rag-agent

./: .gitignore  README.md
backend/: README.md  api-test.http  eval.py  pyproject.toml
backend/src/backend/: __init__.py  config.py  main.py  schemas.py
backend/src/backend/demo/: 001.py
backend/src/backend/llama/: crud.py
backend/src/backend/rag/: agent.py  chain.py  ingest.py  llm.py  loader.py  splitter.py  store.py
backend/src/backend/routes/: chat.py  documents.py  llama.py
backend/src/tests/: conftest.py  test_chat.py  test_documents.py  test_health.py  test_llama.py
examples/: rag-notes.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  api.ts  main.ts  style.css
reports/: reverse-requirements-report.html
