[project]
name = "backend"
version = "0.1.0"
description = "Mini RAG Agent learning backend"
readme = "README.md"
authors = [
    { name = "lsasw", email = "1255143619@qq.com" }
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.37.0",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.10.1",
    "langchain>=1.3.0",
    "langchain-openai>=1.3.0",
    "langchain-text-splitters>=1.0.0",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "httpx>=0.28.1",
    "llama-index-core>=0.14.23",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
